# aef-export

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
aef_export/: cli.py  coverage.py  embeddings.py  settings.py  sqlite.py  utils.py
tests/unit/: test_cli.py  test_coverage.py  test_embeddings.py  test_utils.py
