[project]
name = "aef-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "earthengine-api>=1.6.6",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "google-cloud-bigquery>=3.37.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
    "shapely>=2.1.1",
]

[project.scripts]
aef-export = "aef_export.cli:app"
